--- a/R/Open_chest_gam_v5.Rmd
+++ b/R/Open_chest_gam_v5.Rmd
@@ -201,9 +201,10 @@ ui <- fluidPage(theme = shinytheme("sandstone"),
                                  min = 1, max = 100, value = 50)
              ),
              
-             mainPanel(plotOutput(outputId = "insp_plot")),
+             mainPanel( plotOutput(outputId = "insp_plot")),
                  verbatimTextOutput("maksimum_closed"),
-                 verbatimTextOutput("maksimum_open")
+                 verbatimTextOutput("maksimum_open"),
+                  #plotOutput(outputId = "kontur")
              )
   )
 )
@@ -250,8 +251,9 @@ server <- function(input, output) {
 #    create_viz(pred_both = preds, patient_number = toString(strtoi(str_sub(input$patient,-2))))
 #    testp <- qplot(rnorm(500),fill=I("red"),binwidth=0.2,main="plotgraph1")
     plotmatrix <- rbind(c(1,2),
-                        c(3,3))
-    plotlist <- list(stackedplotINSP(),stackedplotQRS(),snapplot())
+                        c(3,3),
+                        c(4,5))
+    plotlist <- list(stackedplotINSP(),stackedplotQRS(),snapplot(),kontur_closed(), kontur_open())
 #    wtlist <- c(input$wt1,input$wt2,input$wt3)
      # remove the null plots from ptlist and wtlist
 #    to_delete <- !sapply(ptlist,is.null)
@@ -264,8 +266,6 @@ server <- function(input, output) {
   
   
   ## Til tabpanel 3
-
-
  data_time_open  <- reactive({ gratia::evaluate_smooth(pt_data_open(),   's(time_s)')})
  data_time_closed <- reactive({ gratia::evaluate_smooth(pt_data_closed(), 's(time_s)')})
   
@@ -283,7 +283,19 @@ server <- function(input, output) {
                                                 as.character(closed_times()[2]), " Diff: ",
                                                 as.character(closed_times()[3])) })
   
-}
+  
+  #this is new
+  kontur_open <- reactive({
+    gratia::draw(pt_data_open(), select =3)
+  })
+  
+  kontur_closed <- reactive({
+     gratia::draw(pt_data_closed(), select =3)
+  })
+    
+    
+} # server slutter
+
 shinyApp(ui = ui, server = server)
 # https://shiny.rstudio.com/articles/layout-guide.html
 # https://www.youtube.com/watch?v=PHdIivFAq7Q
