--- a/R/Open_chest_gam_v5.Rmd
+++ b/R/Open_chest_gam_v5.Rmd
@@ -111,7 +111,7 @@ create_contour_viz <- function(gather_in_one, patient_number = NULL){
     geom_raster(aes(fill = est)) +
     geom_contour(colour = "black") +
     scale_fill_gradientn(colours=c("#0000FFFF","#FFFFFFFF","#FF0000FF")) +
-      labs(title = "The marginal effect of the interaction term on CVP",
+      labs(title = "Effect of interaction term between respiration and QRS on CVP",
            y = "Relative respiration index",
            x = "Relative QRS index",
            fill = "Estimated effect\non CVP") +
@@ -165,6 +165,36 @@ give_it_center <- function(data_set, center = 50){
   }
   return(data_set)
 }
+insp_add_sub_val <- function(data_set, center = 50){
+  if (which.max(data_set$est) > center ){
+    biggest <- which.max(data_set$est)
+    value_to_subtract <- data_set$insp_rel_index[center] - data_set$insp_rel_index[biggest]
+    return(value_to_subtract)
+  }else{
+    smallest <- which.max(data_set$est)
+    value_to_add <- data_set$insp_rel_index[center] - data_set$insp_rel_index[smallest]
+    return(value_to_add)
+  }
+}
+
+insp_shift_data <- function(data_set, shift_value_open, shift_value_closed){
+  data_set <- mutate(data_set, insp_rel_index = ifelse(indicator=="open_chest",
+                                                       (data_set$insp_rel_index + shift_value_open) %% 1,
+                                                       (data_set$insp_rel_index + shift_value_closed) %% 1))
+  
+#  data_set$insp_rel_index <- (data_set$insp_rel_index + shift_value_open) %% 1
+  return(data_set)
+}
+
+move_kontour <- function(data_contour, input_scale_open, input_scale_closed){
+  data_contour <- mutate(data_contour,
+                         est = c(est[((100 - input_scale_open) * 100 + 1):10000],
+                                 est[1:((100 - input_scale_open) * 100)],
+                                 est[((100 - input_scale_closed) * 100 + 10001):20000],
+                                 est[10001:((100 - input_scale_closed) * 100 + 10000)]))
+  return(data_contour)
+}
+
 ```
 
 Testing area:
@@ -267,23 +297,34 @@ server <- function(input, output) {
   patient_path_closed <- reactive({paste("../GAM_RDS/", input$patient, "CLOSED.rds",sep="") })
   pt_data_closed <- reactive({readRDS(patient_path_closed(), refhook = NULL) })
 
+  open_add_sub_value <- reactive({insp_add_sub_val(gratia::evaluate_smooth(pt_data_open(),'s(insp_rel_index)'),
+                                                   input$center_open)})
+  closed_add_sub_value <- reactive({insp_add_sub_val(gratia::evaluate_smooth(pt_data_closed(),'s(insp_rel_index)'), 
+                                                     input$center_closed)})
+  
   # For snap plots
-  preds <- reactive({create_patient_preds(pt_data_open(), pt_data_closed())})
+  preds <- reactive({insp_shift_data(create_patient_preds(pt_data_open(), pt_data_closed()),
+                                     open_add_sub_value(), 
+                                     closed_add_sub_value())})
   snapplot <- reactive({create_viz(pred_both = preds())})
 
 
   # For stacked plots
-  stackedp <- reactive({stacked_plot(give_it_center(gratia::evaluate_smooth(pt_data_open(),'s(insp_rel_index)'),input$center_open),
-                                     give_it_center(gratia::evaluate_smooth(pt_data_closed(),'s(insp_rel_index)'),input$center_closed),
-                                     gratia::evaluate_smooth(pt_data_open(),'s(qrs_rel_index)'),
-                                     gratia::evaluate_smooth(pt_data_closed(),'s(qrs_rel_index)'))})
+  stackedp <- reactive({stacked_plot(
+    give_it_center(gratia::evaluate_smooth(pt_data_open(),'s(insp_rel_index)'),input$center_open),
+    give_it_center(gratia::evaluate_smooth(pt_data_closed(),'s(insp_rel_index)'),input$center_closed),
+    gratia::evaluate_smooth(pt_data_open(),'s(qrs_rel_index)'),
+    gratia::evaluate_smooth(pt_data_closed(),'s(qrs_rel_index)'))})
   
   # For contour plots
   data_open_contour <- reactive({ gratia::evaluate_smooth(pt_data_open(), 'ti(qrs_rel_index,insp_rel_index)')})
   data_closed_contour <- reactive({ gratia::evaluate_smooth(pt_data_closed(), 'ti(qrs_rel_index,insp_rel_index)')})
   
   data_contour_patient <- reactive({ create_contour_patient(data_open_contour(), data_closed_contour())})
-  contour_samlet <- reactive({create_contour_viz(data_contour_patient())})
+  contour_samlet <- reactive({create_contour_viz(move_kontour(data_contour_patient(),
+                                                              input$center_open,
+                                                              input$center_closed),
+                                                 toString(strtoi(str_sub(input$patient,-2))))})
   
 
   
